--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,7 @@ development:
   database: sevenboxes_development
   pool: 5
   timeout: 5000
+  user: root
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
